# RAG

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  search.py  vectorstore.py
