[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "chromadb>=1.2.1",
  "faiss-cpu>=1.12.0",
  "ipykernel>=6.29",
  "langchain==0.3.*",
  "langchain-community==0.3.*",
  "langchain-core==0.3.*",
  "langchain-groq>=0.3.8",
  "pymupdf>=1.24", # 1.26.5 is fine too; keep >=1.24 to be safe
  "pypdf>=4.0", # 6.x may be fine; 4+ guarantees modern API
  "sentence-transformers>=5.1.2",
]
